# Job-Spot

./: .env.example  .gitignore  README.md  backend_setup.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
alembic/: env.py
alembic/versions/: 59a2ff8471c8_description_of_change.py  fa0cc952ce04_initial_migration.py
app/: config.py  main.py
app/api/: deps.py
app/api/v1/: applications.py  auth.py  jobs.py  redirects.py  resumes.py  router.py
app/core/: logging.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  application.py  enums.py  job.py  resume.py  user.py
app/parsers/: resume_parser.py
app/schemas/: application.py  job.py  resume.py  user.py
app/scrapers/: base.py  greenhouse.py  indeed.py  lever.py  linkedin.py  utils.py
app/services/: application_service.py  job_service.py  matching_service.py  resume_service.py
app/workers/: celery_app.py  janitor.py  matcher_tasks.py  scraper_tasks.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: job-modal.tsx  resume-upload.tsx
frontend/src/hooks/: use-tab-focus.ts
scripts/: manual_scrape.py  seed_skills.py
static/css/: dashboard.css
static/js/: dashboard.js
templates/: dashboard.html
