[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job-aggregator"
version = "0.1.0"
description = "A job aggregation and matching platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "alembic",
    "pydantic-settings",
    "pydantic[email]",
    "pypdf2",
    "spacy",
    "scikit-learn",
    "celery[redis]",
    "playwright",
    "psycopg2-binary",
    "python-dotenv",
    "httpx",
    "passlib[bcrypt]",
    "bcrypt==4.0.1",
    "pyjwt",
    "jinja2",
    "python-multipart",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
]
